--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
         <div class="container ilus">
             <div class="row">
                 <div class="col align-self-center">
-                    <h1>
+                    <h1 data-aos="fade-down">
                         Yuk, Ikutan Ngaji Bersama Kami Setiap Harinya
                     </h1>
-                    <div class="btn-ngaji d-flex align-items-center justify-content-between mt-5">
+                    <div class="btn-ngaji d-flex align-items-center justify-content-between mt-5" data-aos="fade-right">
                         <span>Mulai Ngaji</span>
                         <div class="bullet d-flex align-items-center justify-content-center">
                             <img width="12" class="img-fluid" src="assets/images/hero-ic-right.png" alt="">
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" data-aos="fade-left">
                     <img width="719" class="img-fluid" src="assets/images/hero-ilus.png" alt="">
                 </div>
             </div>
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-6">
-                    <div class="card-info">
+                    <div class="card-info" data-aos="fade-right">
                         <h3>
                             Belajar Mengaji agar Fasih Dalam <br />
                             <span>
@@ -79,7 +79,7 @@
                             Sebelum mempelajari cara membaca Qur’an, Anda diajak mengenal sejarah Qur’an dari wahyu pertama diturunkan kepada Rasulullah Sallallahu’alaihi Wasalam hingga pemberian i’jam dan harokat yang memudahkan umat untuk membaca dan mempelajarinya.
                         </p>
                     </div>
-                    <div class="btn-ngaji d-flex align-items-center justify-content-between mt-5 ml-3">
+                    <div class="btn-ngaji d-flex align-items-center justify-content-between mt-5 ml-3" data-aos="fade-up">
                         <span>Yuk Daftar</span>
                         <div class="bullet d-flex align-items-center justify-content-center">
                             <img width="12" class="img-fluid" src="assets/images/hero-ic-right.png" alt="">
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-5 mt-5">
                     <div class="row">
-                        <div class="col-md-6 mb-4">
+                        <div class="col-md-6 mb-4" data-aos="flip-left">
                             <div class="card-icon">
                                 <div class="text-center">
                                     <div class="mb-3">
@@ -100,7 +100,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 mb-4">
+                        <div class="col-md-6 mb-4" data-aos="flip-left">
                             <div class="card-icon">
                                 <div class="text-center">
                                     <div class="mb-3">
@@ -112,7 +112,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 mb-4">
+                        <div class="col-md-6 mb-4" data-aos="flip-left">
                             <div class="card-icon">
                                 <div class="text-center">
                                     <div class="mb-3">
@@ -124,7 +124,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 mb-4">
+                        <div class="col-md-6 mb-4" data-aos="flip-left">
                             <div class="card-icon">
                                 <div class="text-center">
                                     <div class="mb-3">
@@ -145,7 +145,7 @@
     <section class="market-info">
         <div class="container">
             <div class="row">
-                <div class="col">
+                <div class="col" data-aos="zoom-in">
                     <div class="card-info">
                         <h6>Al-Quran 
                             <span>Market</span>
@@ -155,10 +155,10 @@
                 </div>
                 <div class="col align-self-center">
                     <div class="d-flex align-items-center">
-                        <div class="card-shop px-5 py-2 mx-2">
+                        <div class="card-shop px-5 py-2 mx-2" data-aos="fade-down">
                             <img src="./assets/images/market-shopee.png" height="45" alt="" />
                         </div>
-                        <div class="card-shop px-5 py-2 mx-2">
+                        <div class="card-shop px-5 py-2 mx-2" data-aos="fade-down">
                             <img src="./assets/images/market-tokped.png" height="45" alt="" />
                         </div>
                     </div>
@@ -166,28 +166,28 @@
             </div>
 
             <div class="row mt-5">
-                <div class="col-md-3 text-center">
+                <div class="col-md-3 text-center" data-aos="fade-up">
                     <img src="./assets/images/market-quran1.png" height="281" alt="" />
                     <div class="card-product">
                         <span>Al-qur’an</span>
                         <h5>FADHILAH</h5>
                     </div>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-md-3 text-center" data-aos="fade-up">
                     <img src="./assets/images/market-quran2.png" height="281" alt="" />
                     <div class="card-product">
                         <span>Al-qur’an</span>
                         <h5>BUKHARA</h5>
                     </div>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-md-3 text-center" data-aos="fade-up">
                     <img src="./assets/images/market-quran3.png" height="281" alt="" />
                     <div class="card-product">
                         <span>Al-qur’an</span>
                         <h5>ASY SYAMIL</h5>
                     </div>
                 </div>
-                <div class="col-md-3 text-center">
+                <div class="col-md-3 text-center" data-aos="fade-up">
                     <img src="./assets/images/market-quran4.png" height="281" alt="" />
                     <div class="card-product">
                         <span>Al-qur’an</span>
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="card-blog">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-down">
                         <div class="card-info">
                             <img src="./assets/images/doc-blog1.png" alt="" style="height: 250px !important;" />
                             <div class="layer-ungu d-flex">
@@ -215,7 +215,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 align-self-center">
+                    <div class="col-md-6 align-self-center" data-aos="fade-left">
                         <div class="card-info-text">
                             <h4>Dokumentasi</h4>
                             <h2>Belajar Ngaji</h2>
@@ -227,35 +227,35 @@
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-2" data-aos="flip-right">
                         <div class="card-info">
                             <img src="./assets/images/doc-blog2.png" alt="" />
                             <div class="layer d-flex">
                                 <div class="align-self-end">
-                                    <h6>Ngaji Bareng Gus Baha</h6>
-                                    <span>25 Agustus 2022</span>
+                                    <h6>Dengarin Ceramah</h6>
+                                    <span>17 Agustus 2022</span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-2" data-aos="flip-right">
                         <div class="card-info">
                             <img src="./assets/images/doc-blog3.png" alt="" />
                             <div class="layer d-flex">
                                 <div class="align-self-end">
-                                    <h6>Ngaji Bareng Gus Baha</h6>
-                                    <span>25 Agustus 2022</span>
+                                    <h6>Bocil lagi dengarin abangnya ngaji</h6>
+                                    <span>20 Agustus 2022</span>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-2" data-aos="flip-right">
                         <div class="card-info">
                             <img src="./assets/images/doc-blog4.png" alt="" />
                             <div class="layer d-flex">
                                 <div class="align-self-end">
-                                    <h6>Ngaji Bareng Gus Baha</h6>
-                                    <span>25 Agustus 2022</span>
+                                    <h6>Sahur On The Road</h6>
+                                    <span>22 Agustus 2022</span>
                                 </div>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                    
                 </div>
             </div>
-            <div class="card-answer">
+            <div class="card-answer" data-aos="flip-up">
                 <div class="row align-items-center">
                     <div class="col-md-4">
                         <h3>
@@ -341,14 +341,19 @@
     <script type="text/javascript" src="assets/js/bootstrap.js"></script>
     <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-    window.addEventListener("scroll", function (){
-        let menuArea = document.getElementById('menu');
-        if (window.pageYOffset > 80){
-            menuArea.classList.add("cus-menu");
-        }else{
-            menuArea.classList.remove("cus-menu")
-        }
-    })
+         $(function() {
+            AOS.init({
+                duration: 1900,
+            })
+        });
+        window.addEventListener("scroll", function (){
+            let menuArea = document.getElementById('menu');
+            if (window.pageYOffset > 80){
+                menuArea.classList.add("cus-menu");
+            }else{
+                menuArea.classList.remove("cus-menu")
+            }
+        })
     </script>
 </body>
 </html>
